--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-<button onclick="buttonClick()">Click2</button>
+<button onclick="buttonAboutJS()">EcmaScript</button>
+<button onclick="buttonClick()">Num</button>
+<button onclick="login()">Login</button>
 </body>
 </html>
