--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 <button onclick="buttonAboutJS()">EcmaScript</button>
 <button onclick="buttonClick()">Num</button>
 <button onclick="login()">Login</button>
+
+<p><button onclick="cycle1()">For</button></p>
+<p><button onclick="cycle2()">While</button></p>
+
+<p><button onclick="Num()">Ввод числа</button></p>
 </body>
 </html>
