--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <input type="button" id="hider" value="Нажмите, чтобы спрятать текст">
 <div id="text">Текст</div>
+<button class="button" onclick="this.hidden=true">THIS</button>
 <script>
     let elem = document.getElementById('hider');
     elem.onclick = function (){
