--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <script>
     let elem = document.getElementById('hider');
     elem.onclick = function (){
+        console.log(this)
         document.getElementById("text").style.display = "none";
     }
-
 </script>
-
 <!--<button onclick="buttonAboutJS()">EcmaScript</button>-->
 <!--<button onclick="buttonClick()">Num</button>-->
 <!--<button onclick="login()">Login</button>-->
